--- a/styles.css
+++ b/styles.css
@@ -176,8 +176,8 @@ grid-template-areas:
         justify-content: center;
     }
     .unitDropdown{
-       right: 10px;
-       top: 10px;
+       position:static;
+       margin-top:10px;
     }
     
 }
